--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
   <div class="field">
 
- <img src="C:\Users\s0046768\Downloads\6年3組 体育_山本　悠仁_保健2024.8_29.png" alt="プロフィール写真" class="profile-img" width="100" height="100">
+ <img src="/blog.png" alt="プロフィール写真" class="profile-img" width="100" height="100">
 <!DOCTYPE html>
 <html lang="en">
 <head>
