--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
   <div class="field">
 
- <img src="/blog.png" alt="プロフィール写真" class="profile-img" width="100" height="100">
+ <img src="https://yucchannel.github.io/blog/blog.png" alt="プロフィール写真" class="profile-img" width="100" height="100">
 <!DOCTYPE html>
 <html lang="en">
 <head>
