--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
 <p>保健の授業暇だなあ</p>
 
 <hr>
-    
+  <h3>2024.9/9</h3>
+<h4> &ensp; [12:03]</h4>
+</div>
+<p>今日はappleの発表。深夜2時におきてYTでライブするぞお</p>
+
+<hr>  
 </body>
 </html>
 
