--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
 
 <hr>
 <div class="p1">
-<h3>2024.9/9</h3>
-<h4> &ensp; [12:03]</h4>
+<h3>2024.9/3</h3>
+<h4> &ensp; [11:06]</h4>
 </div>
-<p>今日はappleの発表。深夜2時におきてYTでライブするぞお</p>
-<hr>  
+<p>今日はappleの発表会　深夜2時におきてみるぞお</p>
+
+    </div>
 </body>
 </html>
 
