--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
 <p>今日はappleの発表会　深夜2時におきてみるぞお</p>
 
     </div>
+  
+<hr>
+<div class="p1">
+<h3>2024.9/3</h3>
+<h4> &ensp; [11:06]</h4>
+</div>
+<p>死にたいな</p>
+
+    </div>
 </body>
 </html>
 
